--- a/package.json
+++ b/package.json
@@ -23,15 +23,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^20.3.0",
+    "@angular/animations": "^20.3.9",
+    "@angular/cdk": "^20.2.11",
+    "@angular/common": "^20.3.9",
     "@angular/compiler": "^20.3.0",
-    "@angular/core": "^20.3.0",
-    "@angular/forms": "^20.3.0",
-    "@angular/platform-browser": "^20.3.0",
+    "@angular/core": "^20.3.9",
+    "@angular/forms": "^20.3.9",
+    "@angular/material": "^20.2.11",
+    "@angular/platform-browser": "^20.3.9",
+    "@angular/platform-browser-dynamic": "^20.3.9",
     "@angular/platform-server": "^20.3.0",
-    "@angular/router": "^20.3.0",
+    "@angular/router": "^20.3.9",
     "@angular/ssr": "^20.3.8",
+    "@ngrx/signals": "^20.1.0",
     "express": "^5.1.0",
+    "firebase": "^12.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -42,12 +48,15 @@
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
+    "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "typescript": "~5.9.2"
   }
 }
