Step 3: Design Signal-Based State Management Layer & Core Data Models

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "target": "ES2022",
-    "module": "preserve"
+    "module": "preserve",
+    "lib": ["ES2022", "DOM"],
+    "useDefineForClassFields": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
